# pyDOE3

./: .gitignore  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: linting.yml  release-pypi.yml  tests.yml
doc/: conf.py  doe_optimal.rst  factorial.rst  index.rst  index_TOC.rst  low_discrepancy_sequences.rst  make.bat  randomized.rst  rsm.rst  sampling_designs.rst  sparse_grids.rst  taguchi.rst
doc/_templates/: layout.html
docs/: contributing.md  credits.md  index.md  installation.md  license.md
docs/assets/stylesheets/: extra.css
docs/reference/: doe_optimal.md  factorial.md  low_discrepancy_sequences.md  randomized.md  response_surface.md  sampling_designs.md  sparse_grid.md  taguchi.md
docs/theory/introduction/: doe-steps.md  doe-uses.md  index.md
pyDOE2/: __init__.py  doe_box_behnken.py  doe_factorial.py  doe_gsd.py  doe_lhs.py  doe_plackett_burman.py
pyDOE3/: __init__.py  build_regression_matrix.py  doe_box_behnken.py  doe_composite.py  doe_factorial.py  doe_fold.py  doe_gsd.py  doe_k_means.py  doe_korobov.py  doe_lhs.py  doe_morris.py  doe_plackett_burman.py  doe_random_k_means.py  doe_random_uniform.py  doe_rank1.py  doe_repeat_center.py  doe_saltelli.py  doe_sobol.py  doe_sparse_grid.py  doe_star.py  doe_stratified.py  doe_sukharev.py  doe_taguchi.py  doe_union.py  doe_vanilla_morris.py  orthogonal_arrays.py  utils.py  var_regression_matrix.py
pyDOE3/OrthogonalArrays/: L_16_2_15.oa  L_32_2_31.oa  L_36_3_23.oa  L_9_3_4.oa
pyDOE3/doe_optimal/: __init__.py  algorithms.py  criterion.py  efficiency.py  model.py  optimal.py  utils.py
pyDOE3/factorial_designs/: __init__.py  _fold.py  _gsd.py  _plackett_burman.py  _repeat_center.py
pyDOE3/grid_designs/: __init__.py  _sukharev.py
pyDOE3/low_discrepancy_sequences/: __init__.py  _cranley_patterson_shift.py  _halton.py  _korobov.py  _sobol.py
pyDOE3/orthogonal_arrays/: L_16_4_5.oa  L_27_2_1_3_12.oa  L_50_2_1_5_11.oa  L_64_4_21.oa  L_8_2_7.oa
pyDOE3/randomized_designs/: __init__.py  _lhs.py  _random_k_means.py
pyDOE3/response_surface_designs/: __init__.py  _box_behnken.py  _composite.py  _doehlert.py  _star.py
pyDOE3/sampling_designs/: __init__.py  _saltelli.py  _vanilla_morris.py
pyDOE3/stratified_sampling_designs/: __init__.py  _stratified.py
pyDOE3/taguchi_designs/: __init__.py  _taguchi.py
pyDOE3/taguchi_designs/orthogonal_arrays/: L_12_2_11.oa  L_18_6_1_3_6.oa  L_25_5_6.oa  L_32_2_1_4_9.oa  L_4_2_3.oa  L_54_2_1_3_25.oa  L_64_2_31.oa  L_81_3_40.oa  __init__.py  orthogonal_arrays.py
pyDOE3/utils/: build_regression_matrix.py  distance.py  union.py  var_regression_matrix.py
tests/: test_box_behnken.py  test_composite.py  test_cranley_patterson_shift.py  test_doehlert.py  test_factorial.py  test_gsd.py  test_halton_sequence.py  test_korobov_sequence.py  test_lhs.py  test_optimal.py  test_plackett_burman.py  test_random_k_means.py  test_random_uniform.py  test_rank1_lattice.py  test_repeat_center.py  test_saltelli.py  test_sobol_sequence.py  test_sparse_grid.py  test_star.py  test_sukharev.py  test_taguchi_design.py  test_union.py  test_vanilla_morris.py
