[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyDOE3"
dynamic = ["version"]
description = "Design of experiments for Python"
authors = [{ name = "Rémi Lafage", email = "remi.lafage@onera.fr" }]
readme = "README.md"
license = "BSD-3-Clause"
keywords = [
    "DOE", "design of experiments", "experimental design", "optimal design",
    "taguchi design", "sparse grids", "optimization", "statistics", "python",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
dependencies = ["numpy", "scipy"]

[project.urls]
homepage = "https://pydoe3.readthedocs.io/en/latest/"
documentation = "https://pydoe3.readthedocs.io/en/latest/reference/factorial/"
source = "https://github.com/relf/pyDOE3"
releasenotes = "https://github.com/relf/pyDOE3/releases/latest"
issues = "https://github.com/relf/pyDOE3/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "pyDOE3/_version.py"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.22",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocstrings[python]>=0.30.1",
    "pymdown-extensions>=10.16.1",
]
